re-wrote background/legal issues section

--- a/ccs/discussion.tex
+++ b/ccs/discussion.tex
@@ -4,3 +4,6 @@
 \subsection{Political Push Back}
 
 \subsection{Law Enforcement}
+
+\subsection{Private CDNs}
+Such as Netflix, Facebook, Google --- \system{} doesn't work for them because they are the content publisher {\it and} the CDN.
