--- a/ccs/intro.tex
+++ b/ccs/intro.tex
@@ -1,2 +1,12 @@
 \section{Introduction}
 \label{sec:intro}
+
+The stakeholders in this 
+example are the content publisher, the CDN, and the Internet users --- and each of these entities differ in what 
+they have at stake.  Alice may be punished for publishing controversial content (such as content that 
+goes against the current regime); the CDN 
+may be held liable for controversial information (or copyright infringing content); the Internet users' 
+privacy could be leaked.  Each stakeholder should be interested (and possibly worried) about the 
+consequences of overreaching government access.  \system{} is a novel design that allows technologists to play 
+a role in the way data is governed, and to protect users, operators, and publishers from an overreaching government (or 
+conflicting jurisdictional policies).
