--- a/ccs/paper.tex
+++ b/ccs/paper.tex
@@ -82,6 +82,7 @@
 \input{background}
 \input{threat_model}
 \input{design}
+\input{protocol}
 %\input{details}
 \input{analysis}
 \input{performance}
