--- a/ccs/sigproc.bib
+++ b/ccs/sigproc.bib
@@ -15,10 +15,22 @@
   howpublished = {\url{https://www.cedexis.com/}}
 }
 
+@misc{akamai_global_traffic,
+  title = "{Akamai Empowers Operators to Deploy Their Own Content Distribution Network}",
+  key = "Akamai",
+  howpublished = {\url{https://www.akamai.com/us/en/resources/content-distribution-network.jsp}}
+}
+
 @misc{rfc2227,
   title = "{Simple Hit-Metering and Usage-Limiting for HTTP}",
   key = "Simple",
   howpublished = {\url{https://www.ietf.org/rfc/rfc2227.txt}}
+}
+
+@misc{eff_cloudflare_trademark,
+  title = "{Victory for CloudFlare Against SOPA-like Court Order: Internet Service Doesn't Have to Police Music Labels' Trademark}",
+  key = "Victory",
+  howpublished = {\url{https://www.eff.org/deeplinks/2015/07/victory-cloudflare-against-sopa-court-order-internet-service-doesnt-have-police}}
 }
 
 @misc{akamai_facts,
