--- a/ccs/sigproc.bib
+++ b/ccs/sigproc.bib
@@ -27,6 +27,12 @@
   howpublished = {\url{https://www.ietf.org/rfc/rfc2227.txt}}
 }
 
+@misc{microsoft_germany,
+  title = "{Microsoft Offers EU Customers Option to Store Data in Germany}",
+  key = "Microsoft",
+  howpublished = {\url{https://www.wsj.com/articles/microsoft-tightens-eu-clients-data-protection-1447247197}}
+}
+
 @misc{eff_cloudflare_trademark,
   title = "{Victory for CloudFlare Against SOPA-like Court Order: Internet Service Doesn't Have to Police Music Labels' Trademark}",
   key = "Victory",
