added text to Design section

--- a/ccs/threat_model.tex
+++ b/ccs/threat_model.tex
@@ -49,7 +49,7 @@ and we further discuss our design decisions in Section \ref{sec:design}.
 \label{tab:design_goals}
 \end{table*}
 
-{\bf Preventing the CDN from knowing information.} First, and foremost, the CDN 
+{\bf Prevent the CDN from knowing information.} First, and foremost, the CDN 
 should not have access to all the information that it currently has access to (as described 
 in Section \ref{sec:background}.  By limiting the information that the CDN knows, it limits 
 the amount of information that an adversary can learn or request.  \system{} should hide 
